--- a/small_gui.ui
+++ b/small_gui.ui
@@ -24,17 +24,17 @@
      </rect>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit">
+   <widget class="QLineEdit" name="linePeriod">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>210</y>
+      <x>200</x>
+      <y>200</y>
       <width>113</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>type something</string>
+     <string/>
     </property>
    </widget>
    <widget class="QTextBrowser" name="History">
@@ -50,8 +50,8 @@
    <widget class="QPushButton" name="initializeButton">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>170</y>
+      <x>180</x>
+      <y>240</y>
       <width>151</width>
       <height>32</height>
      </rect>
@@ -71,6 +71,19 @@
     </property>
     <property name="text">
      <string>History:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="linePeriodLabel">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>180</y>
+      <width>71</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Line period:</string>
     </property>
    </widget>
   </widget>
