--- a/small_gui.ui
+++ b/small_gui.ui
@@ -20,7 +20,7 @@
       <x>180</x>
       <y>141</y>
       <width>371</width>
-      <height>281</height>
+      <height>361</height>
      </rect>
     </property>
    </widget>
@@ -43,7 +43,7 @@
       <x>335</x>
       <y>170</y>
       <width>211</width>
-      <height>241</height>
+      <height>111</height>
      </rect>
     </property>
    </widget>
@@ -86,6 +86,52 @@
      <string>Line period:</string>
     </property>
    </widget>
+   <widget class="QGraphicsView" name="pumpsOnPlot">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>331</y>
+      <width>161</width>
+      <height>161</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QGraphicsView" name="pumpsOffPlot">
+    <property name="geometry">
+     <rect>
+      <x>365</x>
+      <y>331</y>
+      <width>171</width>
+      <height>161</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="pumpOnLabel">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>310</y>
+      <width>151</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Avg Pumps On</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="pumpOffLabel">
+    <property name="geometry">
+     <rect>
+      <x>370</x>
+      <y>310</y>
+      <width>161</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Avg Pumps Off</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -93,7 +139,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>24</height>
+     <height>18</height>
     </rect>
    </property>
   </widget>
