--- a/small_gui.ui
+++ b/small_gui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>889</width>
+    <height>682</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,18 +17,18 @@
    <widget class="QGraphicsView" name="graphicsView">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>141</y>
-      <width>371</width>
-      <height>361</height>
+      <x>90</x>
+      <y>30</y>
+      <width>651</width>
+      <height>521</height>
      </rect>
     </property>
    </widget>
    <widget class="QLineEdit" name="linesPerFrame">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>200</y>
+      <x>240</x>
+      <y>60</y>
       <width>113</width>
       <height>21</height>
      </rect>
@@ -40,20 +40,20 @@
    <widget class="QTextBrowser" name="History">
     <property name="geometry">
      <rect>
-      <x>335</x>
-      <y>170</y>
-      <width>211</width>
-      <height>111</height>
+      <x>460</x>
+      <y>70</y>
+      <width>261</width>
+      <height>191</height>
      </rect>
     </property>
    </widget>
    <widget class="QPushButton" name="initializeButton">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>240</y>
+      <x>110</x>
+      <y>90</y>
       <width>151</width>
-      <height>32</height>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
@@ -63,8 +63,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>410</x>
-      <y>150</y>
+      <x>560</x>
+      <y>50</y>
       <width>60</width>
       <height>16</height>
      </rect>
@@ -76,9 +76,9 @@
    <widget class="QLabel" name="linesPerFrameLabel">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>180</y>
-      <width>71</width>
+      <x>130</x>
+      <y>60</y>
+      <width>121</width>
       <height>16</height>
      </rect>
     </property>
@@ -89,28 +89,28 @@
    <widget class="QGraphicsView" name="pumpsOnPlot">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>331</y>
-      <width>161</width>
-      <height>161</height>
+      <x>100</x>
+      <y>300</y>
+      <width>301</width>
+      <height>241</height>
      </rect>
     </property>
    </widget>
    <widget class="QGraphicsView" name="pumpsOffPlot">
     <property name="geometry">
      <rect>
-      <x>365</x>
-      <y>331</y>
-      <width>171</width>
-      <height>161</height>
+      <x>410</x>
+      <y>300</y>
+      <width>311</width>
+      <height>241</height>
      </rect>
     </property>
    </widget>
    <widget class="QLabel" name="pumpOnLabel">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>310</y>
+      <x>100</x>
+      <y>270</y>
       <width>151</width>
       <height>20</height>
      </rect>
@@ -122,8 +122,8 @@
    <widget class="QLabel" name="pumpOffLabel">
     <property name="geometry">
      <rect>
-      <x>370</x>
-      <y>310</y>
+      <x>410</x>
+      <y>270</y>
       <width>161</width>
       <height>20</height>
      </rect>
@@ -132,14 +132,27 @@
      <string>Avg Pumps Off</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="exitCameraButton">
+    <property name="geometry">
+     <rect>
+      <x>270</x>
+      <y>90</y>
+      <width>151</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Exit Camera</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
-     <height>18</height>
+     <width>889</width>
+     <height>24</height>
     </rect>
    </property>
   </widget>
