added update file for small UI and fixed bug where PlotWidget wasnt being rendered

--- a/small_gui.ui
+++ b/small_gui.ui
@@ -86,7 +86,7 @@
      <string>Lines per frame:</string>
     </property>
    </widget>
-   <widget class="QGraphicsView" name="pumpsOnPlot">
+   <widget class="PlotWidget" name="pumpsOnPlot">
     <property name="geometry">
      <rect>
       <x>100</x>
@@ -96,7 +96,7 @@
      </rect>
     </property>
    </widget>
-   <widget class="QGraphicsView" name="pumpsOffPlot">
+   <widget class="PlotWidget" name="pumpsOffPlot">
     <property name="geometry">
      <rect>
       <x>410</x>
@@ -158,6 +158,13 @@
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>PlotWidget</class>
+   <extends>QGraphicsView</extends>
+   <header>pyqtgraph</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
